--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div class="cta-button">
-                <a href="#" class="btn btn-primary">Agende uma Demonstração</a>
+                <a target="_blank" href="https://wa.me/5511984683865?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Atendente%20Virtual%20para%20meu%20petshop." class="btn btn-primary">Agende uma Demonstração</a>
             </div>
         </div>
     </header>
@@ -57,13 +57,13 @@
     <section class="partners">
         <div class="container">
             <h2>PETSHOPS QUE CONFIAM NA NOSSA SOLUÇÃO</h2>
-            <div class="partners-logos">
+            <!-- <div class="partners-logos">
                 <div class="partner-logo"><div class="placeholder-logo">Pet Shop A</div></div>
                 <div class="partner-logo"><div class="placeholder-logo">Clínica B</div></div>
                 <div class="partner-logo"><div class="placeholder-logo">Pet Center C</div></div>
                 <div class="partner-logo"><div class="placeholder-logo">Dog House D</div></div>
                 <div class="partner-logo"><div class="placeholder-logo">Cat & Dog E</div></div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="cta-center">
-                <a href="#" class="btn btn-secondary">
+                <a target="_blank" href="https://wa.me/5511984683865?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Atendente%20Virtual%20para%20meu%20petshop.'" class="btn btn-secondary">
                     <i class="fas fa-arrow-right"></i> SOLICITE UMA DEMONSTRAÇÃO
                 </a>
             </div>
@@ -289,7 +289,7 @@
                 <div class="transformation-text">
                     <p>A Atendente Virtual é a solução que faltava para seu petshop otimizar agendas, reduzir faltas e melhorar a experiência do tutor.</p>
                     <p class="highlight-text">Chega de perder horários. Comece agora.</p>
-                    <a href="#" class="btn btn-primary">
+                    <a target="_blank" href="https://wa.me/5511984683865?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Atendente%20Virtual%20para%20meu%20petshop.'" class="btn btn-primary">
                         <i class="fas fa-arrow-right"></i> VEJA COMO FUNCIONA!
                     </a>
                 </div>
@@ -579,8 +579,8 @@
                 </div>
                 <div class="footer-contact">
                     <h3>Contato</h3>
-                    <p><i class="fas fa-envelope"></i> contato@atendentevirtualpet.com.br</p>
-                    <p><i class="fas fa-phone"></i> (11) 9999-9999</p>
+                    <p><i class="fas fa-envelope"></i> contato@atendentenozap.com.br</p>
+                    <p><i class="fas fa-phone"></i> (11) 98462-3865</p>
                     <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
